fixed overlapping between right arrow button and overflow button

--- a/packages/main/src/themes/TabContainer.css
+++ b/packages/main/src/themes/TabContainer.css
@@ -99,8 +99,7 @@
 }
 
 .ui-tc__overflowButton {
-	margin-left: auto;
-	margin-right: 0.25rem;
+	margin: 0 0.25rem;
 }
 
 .ui5-tc-root.ui5-tc--textOnly .ui5-tc__content {
